<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.auth.Login">

    <LinearLayout
        android:id="@+id/msgSnackbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/logoImgLogin"
        android:src="@drawable/logo_splash"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:id="@+id/textLogoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/edulock"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/custom_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImgLogin"/>

    <TextView
        android:id="@+id/textDescLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/mengatur_penggunaan_aplikasi_untuk_anak_dengan_edukasi"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="16sp"
        android:textColor="@color/custom_color_primary"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/textLogoLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textEmailLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/custom_color_primary"
        android:hint="@string/email"
        app:boxStrokeColor="@color/custom_color_primary"
        app:layout_constraintTop_toBottomOf="@+id/textDescLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailLoginInput"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textPasswordLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/custom_color_primary"
        android:hint="@string/password"
        app:boxStrokeColor="@color/custom_color_primary"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/custom_color_primary"
        app:layout_constraintTop_toBottomOf="@+id/textEmailLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordLoginInput"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        android:backgroundTint="@color/custom_color_primary"
        app:layout_constraintTop_toBottomOf="@+id/textPasswordLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textLinkToRegister"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>