<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.Register">

    <LinearLayout
        android:id="@+id/snackBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/logoImgRegister"
        android:src="@drawable/logo_splash"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:id="@+id/textDaftar"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="Daftar Edulock"
        android:textColor="@color/custom_color_primary"
        android:textSize="28sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImgRegister" />

    <TextView
        android:id="@+id/textDescDaftar"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center"
        android:fontFamily="@font/montserrat_regular"
        android:text="Bergabung menjadi bagian\n Orangtua hebat"
        android:textColor="@color/custom_color_primary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDaftar" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textEmailRegister"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/custom_color_primary"
        android:hint="@string/email"
        app:boxStrokeColor="@color/custom_color_primary"
        app:endIconTint="@color/custom_color_primary"
        app:layout_constraintTop_toBottomOf="@+id/textDescDaftar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/custom_color_primary"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEmailRegist"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textPasswordRegister"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/custom_color_primary"
        android:hint="@string/password"
        app:boxStrokeColor="@color/custom_color_primary"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/custom_color_primary"
        app:layout_constraintTop_toBottomOf="@+id/textEmailRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/custom_color_primary"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPasswordRegist"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNextRegister"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:text="Daftar dan Lanjut"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        android:backgroundTint="@color/custom_color_primary"
        app:layout_constraintTop_toBottomOf="@+id/textPasswordRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textLinkToLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/buttonNextRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>